--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,11 +25,13 @@
     }
    ],
    "source": [
-    "from gpt_4o_mini import Trainer, GPT4Model\n",
+    "from llm_classifier import LMTrainer, LMClassifier\n",
     "from svm_tfidf import SVMClassifier\n",
     "import os\n",
     "import dotenv\n",
     "import requests\n",
+    "import wandb\n",
+    "import random\n",
     "\n",
     "dotenv.load_dotenv()"
    ]
@@ -43,17 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available models: ['gpt-4o', 'llama3.1:70b', 'llama3.1:8b', 'o1-mini', 'o1-preview', 'gpt-4', 'gpt-4o-mini', 'gpt-4-turbo']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_models() -> list:\n",
     "    url = f\"{os.getenv(\"PROXY_URL\")}/models\"\n",
@@ -86,265 +80,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train data: 10\n",
-      "Test data: 20\n",
-      "Going to sample between 1 and 4 traces per predictor.\n",
-      "Will attempt to bootstrap 5 candidate sets.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 5 / 10  (50.0): 100%|██████████| 10/10 [00:07<00:00,  1.40it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New best score: 50.0 for seed -3\n",
-      "Scores so far: [50.0]\n",
-      "Best score so far: 50.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:06<00:00,  1.65it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New best score: 100.0 for seed -2\n",
-      "Scores so far: [50.0, 100.0]\n",
-      "Best score so far: 100.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 4/10 [00:03<00:05,  1.08it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrapped 4 full traces after 5 examples in round 0.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:04<00:00,  2.36it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores so far: [50.0, 100.0, 100.0]\n",
-      "Best score so far: 100.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 4/10 [00:07<00:11,  1.89s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrapped 4 full traces after 5 examples in round 0.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:03<00:00,  2.67it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores so far: [50.0, 100.0, 100.0, 100.0]\n",
-      "Best score so far: 100.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 2/10 [00:03<00:14,  1.79s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrapped 2 full traces after 3 examples in round 0.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:03<00:00,  2.90it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores so far: [50.0, 100.0, 100.0, 100.0, 100.0]\n",
-      "Best score so far: 100.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|█         | 1/10 [00:01<00:14,  1.66s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrapped 1 full traces after 2 examples in round 0.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:02<00:00,  3.41it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores so far: [50.0, 100.0, 100.0, 100.0, 100.0, 100.0]\n",
-      "Best score so far: 100.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 2/10 [00:03<00:13,  1.72s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrapped 2 full traces after 3 examples in round 0.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:05<00:00,  1.88it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores so far: [50.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0]\n",
-      "Best score so far: 100.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 2/10 [00:03<00:12,  1.59s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrapped 2 full traces after 3 examples in round 0.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:05<00:00,  1.74it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores so far: [50.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0]\n",
-      "Best score so far: 100.0\n",
-      "8 candidate programs found.\n",
-      "Evaluation results: Accuracy 95.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "proxy_url = os.getenv(\"PROXY_URL\")\n",
     "\n",
+    "gpt_model = LMClassifier(api_key=api_key, proxy_url=proxy_url, domain='law', model_name='gpt-4o-mini', train_size=10, test_size=20)\n",
+    "gpt_model.load_data(open_path=\"../data/open_domain_data.csv\", specific_path=\"../data/specific_domain_data.csv\")\n",
     "\n",
-    "gpt_model = GPT4Model(api_key=api_key, proxy_url=proxy_url, domain='law', model_name='gpt-4o-mini', train_size=10, test_size=20)\n",
-    "gpt_model.load_data(\"../data/open_domain_data.csv\", \"../data/specific_domain_data.csv\")\n",
-    "\n",
-    "trainer = Trainer(gpt_model.train_data)\n",
-    "compiled_model = trainer.optimize_model()\n",
-    "accuracy = trainer.test_model(gpt_model.test_data)\n",
-    "\n",
-    "print(f\"Evaluation results: Accuracy {accuracy * 100:.2f}%\")"
+    "trainer = LMTrainer(gpt_model.train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('prog', Predict(StringSignature(prompt -> reasoning, target, label\n",
-      "    instructions='Classify if a text is specific for a domain or not.'\n",
-      "    prompt = Field(annotation=str required=True json_schema_extra={'desc': 'The prompt to classify.', '__dspy_field_type': 'input', 'prefix': 'Prompt:'})\n",
-      "    reasoning = Field(annotation=str required=True json_schema_extra={'prefix': \"Reasoning: Let's think step by step in order to\", 'desc': '${reasoning}', '__dspy_field_type': 'output'})\n",
-      "    target = Field(annotation=str required=True json_schema_extra={'desc': 'The target domain to classify the prompt against.', '__dspy_field_type': 'output', 'prefix': 'Target:'})\n",
-      "    label = Field(annotation=str required=True json_schema_extra={'desc': '1, if the input text belong to domain, 0 otherwise.', '__dspy_field_type': 'output', 'prefix': 'Label:'})\n",
-      ")))]\n",
-      "Model saved to ../models/gpt-4o-mini.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "compiled_model = trainer.optimize_model()\n",
+    "accuracy = trainer.test_model(gpt_model.test_data)\n",
+    "\n",
+    "print(f\"Evaluation results: Accuracy {accuracy * 100:.2f}%\")\n",
+    "\n",
     "trainer.save_model(f\"../models/{gpt_model.model_name}.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.load_model(f\"../models/{gpt_model.model_name}.json\")\n",
+    "\n",
+    "results = trainer.predict(\"How does law balance the protection of individual rights with the needs of society?\")\n",
+    "\n",
+    "print(f\"Prediction results: {results}\")"
    ]
   },
   {
@@ -360,28 +133,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "svm_classifier = SVMClassifier(C=0.1, train_size=10_000, test_size=10_000, seed=22)\n",
+    "def sweep_svm_classifier(config=None):\n",
+    "    wandb.init(config=config)\n",
+    "    config = wandb.config\n",
     "\n",
-    "# Prepare data (assuming 'dummy_open.csv' and 'dummy_specific.csv' are paths to your data files)\n",
-    "X_train, X_test, y_train, y_test = svm_classifier.prepare_data(\"../data/open_domain_data.csv\", \"../data/specific_domain_data.csv\")\n",
+    "    svm_classifier = SVMClassifier(config)\n",
+    "    \n",
+    "    X_train, X_test, y_train, y_test = svm_classifier.prepare_data(open_path=\"../data/open_domain_data.csv\", \n",
+    "                                                                   specific_path=\"../data/specific_domain_data.csv\")\n",
+    "    \n",
+    "    svm_classifier.train(X_train, y_train)\n",
+    "    cv_results = svm_classifier.cross_validate_model(X_train, y_train, cv=3)\n",
     "\n",
-    "# Train the model\n",
-    "svm_classifier.train(X_train, y_train)\n",
+    "    wandb.log({\"cv_results\": cv_results.get(\"average_accuracy\")})\n",
+    "    \n",
+    "    return cv_results.get(\"average_accuracy\")\n",
     "\n",
-    "# Cross-validate\n",
-    "cv_results = svm_classifier.cross_validate_model(X_train, y_train, cv=3)\n",
-    "print(\"Cross-validation Results:\", cv_results)"
+    "sweep_configuration = {\n",
+    "    'method': 'random', \n",
+    "    'name': 'svm-sweep',\n",
+    "    'metric': {\n",
+    "        'name': 'cv_results',\n",
+    "        'goal': 'maximize',  \n",
+    "    },\n",
+    "    'parameters': {\n",
+    "        'C': {\n",
+    "            'min': float(0.01),\n",
+    "            'max': float(10),\n",
+    "        },\n",
+    "        'train_size': {\n",
+    "            'min': 1000,\n",
+    "            'max': 10000,\n",
+    "        },\n",
+    "        'test_size': {\n",
+    "            'min': 1000,\n",
+    "            'max': 10000,\n",
+    "        },\n",
+    "        'seed': {\n",
+    "            'values': [random.randint(0, 100) for _ in range(10)],\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "sweep_id = wandb.sweep(sweep_configuration, project='bc-prompt-classification')\n",
+    "\n",
+    "wandb.agent(sweep_id, function=sweep_svm_classifier, count=10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wandb: Sorting runs by -summary_metrics.cv_results\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.98      0.98      1135\n",
+      "           1       0.97      0.97      0.97       815\n",
+      "\n",
+      "    accuracy                           0.97      1950\n",
+      "   macro avg       0.97      0.97      0.97      1950\n",
+      "weighted avg       0.97      0.97      0.97      1950\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.9738461538461538,\n",
+       " 'precision': np.float64(0.9692874692874693),\n",
+       " 'recall': np.float64(0.9680981595092024)}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Evaluate on test data\n",
-    "evaluation_results = svm_classifier.evaluate(X_test, y_test)\n",
-    "print(\"Evaluation Results:\", evaluation_results)"
+    "wandb.login() \n",
+    "api = wandb.Api()\n",
+    "\n",
+    "sweeps = api.sweep(f'/riso-sleher-fiit-stu/bc-prompt-classification/sweeps/{sweep_id}')\n",
+    "\n",
+    "best_config = sweeps.best_run().config\n",
+    "\n",
+    "svm_classifier = SVMClassifier(best_config)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = svm_classifier.prepare_data(open_path=\"../data/open_domain_data.csv\", \n",
+    "                                                               specific_path=\"../data/specific_domain_data.csv\")\n",
+    "\n",
+    "svm_classifier.train(X_train, y_train)\n",
+    "svm_classifier.evaluate(X_test, y_test)"
    ]
   },
   {
@@ -391,14 +245,20 @@
    "outputs": [],
    "source": [
     "# Save the model\n",
-    "svm_classifier.save_model('svm_model.joblib')"
+    "svm_classifier.save_model(f'../models/{svm_classifier.model_name}.joblib')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# LSTM"
+    "svm_classifier.load_model(f'../models/{svm_classifier.model_name}.joblib')\n",
+    "\n",
+    "result = svm_classifier.predict(\"How does culture influence perceptions of justice and fairness within a legal system?\")\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
