--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -5,14 +5,17 @@
    "metadata": {},
    "source": [
     "# TODO\n",
-    "- Models to add: poguglit nejaky ML alg co ma dobre vysledky na NLP binarnu clasifikaciu + xgboost z https://github.com/matyasbohacek/xgboost-vs-gpt4 \n",
-    "- otestovat potom na llame mby \n",
-    "- vygenerovat cca 100 edge case dat \"What are the laws for ..bullshit..\", through validation\n",
-    "- lepsi open-domain dataset vytvorit, nejake general questions/prompts, moc odborne som zobral\n",
-    "- gridsearch na ML models + nieco podobne na fasttext\n",
-    "- wandb saving/namiesto gridsearch wandb sweep\n",
+    "- upratat ten hnusny kod + EDA v nb\n",
+    "- wandb logging sweep\n",
+    "- ModernBERT https://huggingface.co/tasksource/ModernBERT-base-nli\n",
     "<hr>\n",
-    "https://huggingface.co/datasets/nomic-ai/gpt4all-j-prompt-generations"
+    "GENERAL: https://huggingface.co/datasets/alespalla/chatbot_instruction_prompts \n",
+    "\n",
+    "LAW: https://huggingface.co/datasets/dim/law_stackexchange_prompts \n",
+    "\n",
+    "FINANCE: https://huggingface.co/datasets/Marina-C/question-answer-Subject-Finance-Instruct \n",
+    "\n",
+    "HEALTHCARE: https://huggingface.co/datasets/iecjsu/lavita-ChatDoctor-HealthCareMagic-100k "
    ]
   },
   {
@@ -24,8 +27,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\riso\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "[nltk_data] Downloading package stopwords to ../.venv\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package punkt_tab to ../.venv\\nltk_data...\n",
@@ -40,7 +41,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,6 +58,7 @@
     "from tqdm import tqdm\n",
     "import re\n",
     "import nltk\n",
+    "from datasets import load_dataset\n",
     "\n",
     "nltk.download('stopwords', download_dir=os.path.join(os.path.dirname('../.venv/'), 'nltk_data'))\n",
     "nltk.download('punkt_tab', download_dir=os.path.join(os.path.dirname('../.venv/'), 'nltk_data'))\n",
@@ -67,16 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "finQA = load_dataset(\"LLukas22/fiqa\")\n",
+    "medQA = load_dataset(\"medalpaca/medical_meadow_medical_flashcards\")\n",
+    "\n",
     "open_path = \"../data/open_domain_data.csv\"\n",
     "specific_path = \"../data/specific_domain_data.csv\"\n",
     "\n",
     "train_size = 10_000\n",
     "test_size = 10_000\n",
-    "val_size = 1000"
+    "val_size = 2000"
    ]
   },
   {
@@ -690,6 +695,55 @@
    "source": [
     "ft_model.save_model(f\"../models/{fasttext_model.model_name}.bin\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\riso\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Generating train split: 100%|██████████| 14511/14511 [00:00<00:00, 222738.60 examples/s]\n",
+      "Generating test split: 100%|██████████| 2561/2561 [00:00<00:00, 232855.25 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "ds = load_dataset(\"LLukas22/fiqa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = ds['train']['question']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'What do brokers do with bad stock?'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
