--- a/notebooks/01_processing.ipynb
+++ b/notebooks/01_processing.ipynb
@@ -6,21 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "\n",
     "os.chdir(\"../\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,13 +61,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finance_df['label'] = 1\n",
+    "finance_df = finance_df.head(20000)\n",
+    "finance_df[['prompt', 'label']].to_csv('data/processed/finance_prompts.csv', index=False, sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "finance_df['label'] = True\n",
-    "finance_df = finance_df.head(20000)\n",
-    "finance_df[['prompt', 'label']].to_csv('data/processed/finance_prompts.csv', index=False, sep=';')"
+    "general_df['label'] = 0\n",
+    "general_df = general_df.head(20000)\n",
+    "general_df[['prompt', 'label']].to_csv('data/processed/general_prompts.csv', index=False, sep=';')"
    ]
   },
   {
@@ -83,9 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "general_df['label'] = False\n",
-    "general_df = general_df.head(20000)\n",
-    "general_df[['prompt', 'label']].to_csv('data/processed/general_promps.csv', index=False, sep=';')"
+    "healthcare_df['label'] = 1\n",
+    "healthcare_df['prompt'] = healthcare_df['input']\n",
+    "healthcare_df = healthcare_df.head(20000)\n",
+    "healthcare_df[['prompt', 'label']].to_csv('data/processed/healthcare_prompts.csv', index=False, sep=';')"
    ]
   },
   {
@@ -94,25 +99,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "healthcare_df['label'] = True\n",
-    "healthcare_df = healthcare_df.head(20000)\n",
-    "healthcare_df[['input', 'label']].to_csv('data/processed/healthcare_prompts.csv', index=False, sep=';')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "law_df['label'] = True\n",
+    "law_df['label'] = 1\n",
     "law_df = law_df.head(20000)\n",
     "law_df[['prompt', 'label']].to_csv('data/processed/law_prompts.csv', index=False, sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,14 +152,14 @@
    ],
    "source": [
     "plot_word_count(general_df, 'General')\n",
-    "plot_word_count(healthcare_df, 'Healthcare', text_col='input')\n",
+    "plot_word_count(healthcare_df, 'Healthcare')\n",
     "plot_word_count(finance_df, 'Finance')\n",
     "plot_word_count(law_df, 'Law')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +205,7 @@
    ],
    "source": [
     "plot_common_words(general_df, 'General')\n",
-    "plot_common_words(healthcare_df, 'Healthcare', text_col='input')\n",
+    "plot_common_words(healthcare_df, 'Healthcare')\n",
     "plot_common_words(finance_df, 'Finance')\n",
     "plot_common_words(law_df, 'Law')"
    ]
@@ -240,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
