--- a/notebooks/02_comparison.ipynb
+++ b/notebooks/02_comparison.ipynb
@@ -43,7 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "law_prompts = pd.read_csv('data/processed/law_prompts.csv', sep=';')\n",
     "general_prompts = pd.read_csv('data/processed/general_prompts.csv', sep=';')\n",
     "healthcare_prompts = pd.read_csv('data/processed/healthcare_prompts.csv', sep=';')\n",
@@ -103,7 +102,7 @@
     "tf_idf_embedding = TfidfVectorizer()\n",
     "mini_embedding = TextEmbedding(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
     "\n",
-    "embedding_models = {'baai': baai_embedding, 'tf_idf': tf_idf_embedding, 'mini': mini_embedding}"
+    "embedding_models = {'tf_idf': tf_idf_embedding, 'mini': mini_embedding, 'baai': baai_embedding}"
    ]
   },
   {
@@ -158,6 +157,8 @@
     "        else:\n",
     "            train_embeds = list(embedding_model.embed(train_data['prompt']))\n",
     "            test_embeds = list(embedding_model.embed(test_data['prompt']))\n",
+    "\n",
+    "        print(f\"Embedding model: {model_name}\")\n",
     "\n",
     "        actuals = []\n",
     "        predictions = []\n",
