added tfidf save, gradio demo setup

--- a/notebooks/02_comparison.ipynb
+++ b/notebooks/02_comparison.ipynb
@@ -18,13 +18,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "import time\n",
     "import pickle\n",
+    "import random\n",
     "import statistics\n",
+    "import time\n",
     "\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from fastembed import TextEmbedding\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -172,7 +172,7 @@
     "        start_time = time.perf_counter_ns()\n",
     "        prediction = fasttext_classifier.model.predict(query)\n",
     "        end_time = time.perf_counter_ns()\n",
-    "        \n",
+    "\n",
     "        prediction_times.append(end_time - start_time)\n",
     "\n",
     "        if prediction[0][0] == '__label__1':\n",
@@ -192,6 +192,8 @@
     "\n",
     "        if model_name == 'tf_idf':\n",
     "            embedding_model.fit(train_data['prompt'])\n",
+    "            with open(f\"models/tfidf_{domain}.pkl\", 'wb') as f:\n",
+    "                pickle.dump(embedding_model, f)\n",
     "            train_embeds = embedding_model.transform(train_data['prompt'])\n",
     "            test_embeds = embedding_model.transform(test_data['prompt'])\n",
     "        else:\n",
@@ -199,9 +201,6 @@
     "            test_embeds = list(embedding_model.embed(test_data['prompt']))\n",
     "            train_embeds = np.array(train_embeds).reshape(len(train_embeds), -1)\n",
     "            test_embeds = np.array(test_embeds).reshape(len(test_embeds), -1)\n",
-    "        \n",
-    "        \n",
-    "        print(f\"Embedding model: {model_name}\")\n",
     "\n",
     "        actuals = []\n",
     "        predictions = []\n",
@@ -223,10 +222,9 @@
     "\n",
     "        mean_prediction_time = statistics.mean(prediction_times)\n",
     "        evaluate(predictions, actuals, domain, model_name='SVM', embed_model=model_name, latency=mean_prediction_time)\n",
-    "        \n",
+    "\n",
     "        with open(f\"models/SVM_{domain}_{model_name}.pkl\", 'wb') as f:\n",
     "            pickle.dump(svm_classifier, f)\n",
-    "\n",
     "\n",
     "        actuals = []\n",
     "        predictions = []\n",
@@ -260,7 +258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-classification",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
