created gradio, text preprocessing

--- a/notebooks/01_setup.ipynb
+++ b/notebooks/01_setup.ipynb
@@ -57,6 +57,7 @@
    "outputs": [],
    "source": [
     "finance_df['prompt'] = finance_df['messages'].apply(extract_user_content)\n",
+    "os.makedirs('data/interim', exist_ok=True)\n",
     "os.makedirs('data/processed', exist_ok=True)"
    ]
   },
@@ -80,7 +81,7 @@
     "finance_df = finance_df[general_df['prompt'] != '']\n",
     "finance_df['label'] = 1\n",
     "finance_df = finance_df.head(20000)\n",
-    "finance_df[['prompt', 'label']].to_csv('data/processed/finance_prompts.csv', index=False, sep=';')"
+    "finance_df[['prompt', 'label']].to_csv('data/interim/finance_prompts.csv', index=False, sep=';')"
    ]
   },
   {
@@ -94,7 +95,7 @@
     "general_df = general_df[general_df['prompt'] != '']\n",
     "general_df['label'] = 0\n",
     "general_df = general_df.head(20000)\n",
-    "general_df[['prompt', 'label']].to_csv('data/processed/general_prompts.csv', index=False, sep=';')"
+    "general_df[['prompt', 'label']].to_csv('data/interim/general_prompts.csv', index=False, sep=';')"
    ]
   },
   {
@@ -109,7 +110,7 @@
     "healthcare_df = healthcare_df[healthcare_df['prompt'] != '']\n",
     "healthcare_df['label'] = 1\n",
     "healthcare_df = healthcare_df.head(20000)\n",
-    "healthcare_df[['prompt', 'label']].to_csv('data/processed/healthcare_prompts.csv', index=False, sep=';')"
+    "healthcare_df[['prompt', 'label']].to_csv('data/interim/healthcare_prompts.csv', index=False, sep=';')"
    ]
   },
   {
@@ -124,7 +125,7 @@
     "law_df = law_df[law_df['prompt'] != '']\n",
     "law_df['label'] = 1\n",
     "law_df = law_df.head(20000)\n",
-    "law_df[['prompt', 'label']].to_csv('data/processed/law_prompts.csv', index=False, sep=';')"
+    "law_df[['prompt', 'label']].to_csv('data/interim/law_prompts.csv', index=False, sep=';')"
    ]
   },
   {
@@ -243,7 +244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-classification",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
