--- a/notebooks/01_setup.ipynb
+++ b/notebooks/01_setup.ipynb
@@ -20,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\riso\\miniconda3\\envs\\prompt-validation\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\risko\\miniconda3\\envs\\prompt-classification\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\riso\\AppData\\Local\\Temp\\ipykernel_18728\\340821238.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\risko\\AppData\\Local\\Temp\\ipykernel_7280\\340821238.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  finance_df = finance_df[general_df['prompt'] != '']\n"
      ]
     }
@@ -240,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-validation",
+   "display_name": "prompt-classification",
    "language": "python",
    "name": "python3"
   },
