dependecy fix, modernBERT fix, text length adjusted

--- a/notebooks/03_comparison.ipynb
+++ b/notebooks/03_comparison.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\risko\\Desktop\\Prompt-Classification\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -22,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\risko\\miniconda3\\envs\\prompt-classification\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import random\n",
@@ -41,8 +24,8 @@
     "import time\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import onnxruntime as ort\n",
+    "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from fastembed import TextEmbedding\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -53,8 +36,7 @@
     "from prompt_classifier.metrics import evaluate\n",
     "from prompt_classifier.modeling.dspy_gpt import GPT4oMini\n",
     "from prompt_classifier.modeling.fasttext import FastTextClassifier\n",
-    "\n",
-    "#from prompt_classifier.modeling.nli_modernbert import ModernBERTNLI\n",
+    "from prompt_classifier.modeling.nli_modernbert import ModernBERTNLI\n",
     "\n",
     "load_dotenv()\n",
     "random.seed(42)"
@@ -62,17 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['TensorrtExecutionProvider', 'CUDAExecutionProvider', 'CPUExecutionProvider']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "providers = ort.get_available_providers()\n",
     "\n",
@@ -137,15 +111,13 @@
     "                            domain=domain, train_data=train_data, test_data=test_data)\n",
     "\n",
     "\n",
-    "    gpt_classifier.optimize_model()\n",
+    "    #gpt_classifier.optimize_model()\n",
     "\n",
-    "    predictions, actuals, mean_latency = gpt_classifier.predict()\n",
+    "    #predictions, actuals, mean_latency = gpt_classifier.predict()\n",
     "\n",
-    "    evaluate(predictions=predictions, true_labels=actuals, domain=domain, model_name=\"gpt4o-mini\", embed_model=\"ada-002\", cost=gpt_classifier.cost, latency=mean_latency)\n",
+    "    #evaluate(predictions=predictions, true_labels=actuals, domain=domain, model_name=\"gpt4o-mini\", embed_model=\"ada-002\", cost=gpt_classifier.cost, latency=mean_latency)\n",
     "\n",
-    "    gpt_classifier.save_model(f\"models/gpt-4o-mini-{domain}.json\")\n",
-    "\n",
-    "    break\n",
+    "    #gpt_classifier.save_model(f\"models/gpt-4o-mini-{domain}.json\")\n",
     "\n",
     "    actuals = []\n",
     "    predictions = []\n",
@@ -193,18 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BAAI-BGE available providers: ['CUDAExecutionProvider', 'CPUExecutionProvider']\n",
-      "MiniLM available providers: ['CUDAExecutionProvider', 'CPUExecutionProvider']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'BAAI-BGE available providers: {baai_embedding.model.model.get_providers()}')\n",
     "print(f'MiniLM available providers: {mini_embedding.model.model.get_providers()}')"
@@ -252,8 +215,8 @@
     "\n",
     "    # SVM and XGBoost with different embeddings\n",
     "    for model_name, embedding_model in embedding_models.items():\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
     "        if model_name == 'tf_idf':\n",
     "            embedding_model.fit(train_data['prompt'])\n",
     "            with open(f\"models/tfidf_{domain}.pkl\", 'wb') as f:\n",
@@ -324,7 +287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-classification",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
