--- a/notebooks/03_comparison.ipynb
+++ b/notebooks/03_comparison.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\risko\\Desktop\\Prompt-Classification\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -14,11 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
+    "import torch\n",
     "import statistics\n",
     "import pickle\n",
     "import random  \n",
@@ -46,9 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TensorrtExecutionProvider', 'CUDAExecutionProvider', 'CPUExecutionProvider']\n"
+     ]
+    }
+   ],
    "source": [
     "providers = ort.get_available_providers()\n",
     "\n",
@@ -111,12 +128,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BAAI-BGE available providers: ['CUDAExecutionProvider', 'CPUExecutionProvider']\n",
+      "MiniLM available providers: ['CUDAExecutionProvider', 'CPUExecutionProvider']\n",
+      "Using device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'BAAI-BGE available providers: {baai_embedding.model.model.get_providers()}')\n",
-    "print(f'MiniLM available providers: {mini_embedding.model.model.get_providers()}')"
+    "print(f'MiniLM available providers: {mini_embedding.model.model.get_providers()}')\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")\n",
+    "\n",
+    "torch._dynamo.config.suppress_errors = True"
    ]
   },
   {
@@ -130,7 +162,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cuda:0\n",
+      "  0%|          | 0/88832 [00:00<?, ?it/s]Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "for domain, dataset in datasets_interim.items():\n",
@@ -380,7 +421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-validation",
+   "display_name": "bc",
    "language": "python",
    "name": "python3"
   },
@@ -394,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
