--- a/notebooks/03_comparison.ipynb
+++ b/notebooks/03_comparison.ipynb
@@ -105,9 +105,9 @@
     "    model_name=\"sentence-transformers/all-MiniLM-L6-v2\", providers=[\"CUDAExecutionProvider\"]\n",
     "    )\n",
     "\n",
-    "tfidf = TfidfVectorizer()\n",
+    "tfidf_embedding = TfidfVectorizer()\n",
     "\n",
-    "embedding_models = {'mini': mini_embedding, 'tfidf': tfidf, 'baai': baai_embedding}"
+    "embedding_models = {'mini': mini_embedding, 'tfidf': tfidf_embedding, 'baai': baai_embedding}"
    ]
   },
   {
@@ -253,7 +253,7 @@
     "        train_acc=train_acc\n",
     "    )\n",
     "\n",
-    "embedding_models = {'mini': mini_embedding, 'tf_idf': tf_idf_embedding, 'baai': baai_embedding}"
+    "embedding_models = {'mini': mini_embedding, 'tf_idf': tfidf_embedding, 'baai': baai_embedding}"
    ]
   },
   {
