evaluate function calling after LLM predict  fix

--- a/notebooks/04_results.ipynb
+++ b/notebooks/04_results.ipynb
@@ -22,13 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random  \n",
+    "import random\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
     "random.seed(42)"
    ]
   },
@@ -1317,7 +1318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-classification",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
