--- a/notebooks/01_setup.ipynb
+++ b/notebooks/01_setup.ipynb
@@ -15,16 +15,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\riso\\miniconda3\\envs\\prompt-validation\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from prompt_classifier.datasets import load_datasets"
    ]
@@ -33,18 +24,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\risko\\miniconda3\\envs\\prompt-classification\\Lib\\site-packages\\huggingface_hub\\file_download.py:140: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\risko\\.cache\\huggingface\\hub\\datasets--4DR1455--finance_questions. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n",
-      "Generating train split: 100%|██████████| 53937/53937 [00:00<00:00, 74025.29 examples/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "law_df, finance_df, healthcare_df, general_df = load_datasets()"
    ]
@@ -80,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\riso\\AppData\\Local\\Temp\\ipykernel_9672\\340821238.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\risko\\AppData\\Local\\Temp\\ipykernel_6924\\340821238.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  finance_df = finance_df[general_df['prompt'] != '']\n"
      ]
     }
