testing and fixes

--- a/notebooks/04_results.ipynb
+++ b/notebooks/04_results.ipynb
@@ -2,26 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\risko\\Desktop\\Prompt-Classification\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.chdir(\"../\")\n",
-    "print(os.getcwd())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1318,7 +1298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-validation",
+   "display_name": "prompt-classification",
    "language": "python",
    "name": "python3"
   },
